# tclalist

./: ChangeLog  Makefile.in  README  TODO.org  configure.ac  license.terms  pkgIndex.tcl.in  prepare.sh
doc/: alist.texi  tclalist.texi
doc/RCS/: alist.texi,v
generic/: alist.h  alistDecls.h  alistInt.h  alistStubInit.c  alistStubLib.c  alistTest.h  commands.c  commandstest.c  functions.c  init.c  inittest.c
generic/RCS/: alist.h,v  alistDecls.h,v  alistInt.h,v  alistStubInit.c,v  alistStubLib.c,v  alistTest.h,v  commands.c,v  commandstest.c,v  functions.c,v  init.c,v  inittest.c,v
meta/: DESCRIPTION.txt.in  DESCRIPTION.txt.in,v  pkgIndex.tcl.in  pkgIndex.tcl.in,v
tclconfig/: config.status
tests/: alist.test  all.tcl  libs.tcl  libs.tcl.in  stubs.test  tests.tcl
tests/RCS/: alist.test,v  all.tcl,v  libs.tcl.in,v  stubs.test,v  tests.tcl,v
